Include the Class-Path into the MANIFEST.MF file with javahelper
* d/control: add new build dependency.
* d/rules: specify use of javahelper.
* d/libjlargearrays-java.classpath: specify Class-Path value

--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Uploaders: Carnë Draug <carandraug+dev@gmail.com>
 Build-Depends: debhelper (>= 10)
 Build-Depends-Indep: default-jdk-doc,
  default-jdk-headless,
+ javahelper,
  junit4,
  libcommons-math3-java,
  libcommons-math3-java-doc,
